tests/functions/errors/no_return.c.res
[36mERROR: syntax error, unexpected '}' [0m[4min line 6
[0m}
^
[36mERROR: syntax error, unexpected '}' [0m[4min line 12
[0m}
^
[1m[31mCompilation failed with 2 errors
[0m